<resources>
    <string name="app_name" translatable="false">Reminders</string>

    <string name="action_undo">Undo</string>

    <!--    reminders_fragment-->
    <string name="reminders_title">Reminders</string>
    <string name="reminders_placeholder">Add new reminders</string>
    <string name="reminders_reminder_deleted_message">Reminder deleted</string>

    <!--main menu-->
    <string name="action_sort">Sorting</string>
    <string name="action_settings">Settings</string>

    <!--edit_reminder_fragment-->
    <string name="edit_reminder_hint_title">Title</string>
    <string name="edit_reminder_hint_message">Description</string>
    <string name="edit_reminder_action_notify">notify</string>
    <string name="edit_reminder_action_save">save</string>
    <string name="edit_reminder_repeat">Repeat %s</string>
    <string name="edit_reminder_error_empty_title">Please enter a title</string>

    <!--utilities-->
    <string name="utils_format_time_24h" translatable="false">HH:mm</string>
    <string name="utils_format_time_12h" translatable="false">h:mm a</string>
    <string name="utils_format_full_date" translatable="false">EEEE, dd MMM yyyy</string>
    <string name="utils_format_notification_time" translatable="false">EEEE, dd MMM</string>
    <string name="utils_format_short_date" translatable="false">dd.MM.yy</string>
    <string name="utils_date_now">Now</string>
    <string name="utils_date_today">Today at %s</string>
    <string name="utils_date_tomorrow">Tomorrow at %s</string>

    <!--alarm_dialog-->
    <string name="alarm_dialog_title">Time notification</string>
    <string name="alarm_dialog_time_label">Time</string>
    <string name="alarm_dialog_date_label">Date</string>
    <string name="alarm_dialog_period_label">Repeat</string>
    <string name="alarm_dialog_period_without">Does not repeat</string>
    <string name="alarm_dialog_period_daily">Daily</string>
    <string name="alarm_dialog_period_weekly">Weekly</string>
    <string name="alarm_dialog_period_monthly">Monthly</string>
    <string name="alarm_dialog_period_yearly">Yearly</string>

    <!--notifications-->
    <string name="reminder_channel_name">Reminders</string>
    <string name="reminder_channel_description">Notification about new reminders</string>
    <string name="notification_action_done">Done</string>
    <string name="notification_action_delete">Delete</string>

    <!--bottom bar reminders-->
    <string name="reminders_menu_edit">Edit</string>
    <string name="reminders_menu_notify">Notify</string>
    <string name="reminders_menu_done" translatable="false">@string/notification_action_done</string>
    <string name="reminders_menu_pause">Pause</string>
    <string name="reminders_menu_restore">Restore</string>
    <string name="reminders_menu_delete" translatable="false">@string/notification_action_delete</string>

    <!--bottom bar reminders sort-->
    <string name="reminders_menu_sort_title">Sort by title</string>
    <string name="reminders_menu_sort_status">Sort by status</string>
    <string name="reminders_menu_sort_time">Sort by time</string>

    <!--night mode dialog-->
    <string name="night_mode_dialog_title">Choose theme</string>
    <string name="night_mode_light">Light</string>
    <string name="night_mode_dark">Dark</string>
    <string name="night_mode_follow_system">System default</string>
    <string-array name="night_mode_settings">
        <item>@string/night_mode_light</item>
        <item>@string/night_mode_dark</item>
        <item>@string/night_mode_follow_system</item>
    </string-array>

</resources>
