<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_reminder_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/reminders_menu_edit"
        app:iconTint="@color/colorActiveElement" />

    <item
        android:id="@+id/menu_reminder_notify"
        android:icon="@drawable/ic_action_notify"
        android:title="@string/reminders_menu_notify"
        android:visible="false"
        app:iconTint="@color/colorActiveElement" />

    <item
        android:id="@+id/menu_reminder_done"
        android:icon="@drawable/ic_action_done"
        android:title="@string/reminders_menu_done"
        android:visible="false"
        app:iconTint="@color/colorActiveElement" />

    <item
        android:id="@+id/menu_reminder_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/reminders_menu_delete"
        app:iconTint="@color/colorActiveElement" />

</menu>